<resources>
    <string name="app_name">WhatsInMyFridge</string>
    <string name="recipe_image_description">Recipe image</string>
    <string name="no_connection_msg">No network connection detected.</string>
    <string name="recipe_list_load_failed">Recipes list load failed!</string>
    <string name="error_message">Failed to load recipes</string>
    <string name="action_share">Share</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="instructions_label">Instructions</string>
    <string name="web_site_label">Web Site</string>
    <string name="ingredients_image_description">Ingredient\'s image</string>
    <string name="share_recipe_menu">Share Recipe</string>
    <string name="default_value_false_cb">false</string>
    <string name="cb_key">show_favorites</string>
    <string name="cb_summary_off">Off</string>
    <string name="cb_summary_on">On</string>
    <string name="cb_title">Show Favorite Recipes</string>
    <string name="action_settings">Settings</string>
    <string name="error_message_no_favorite">There is not any favorite recipe</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="favorite_recipes">Favorite recipes</string>
    <string name="widget_configuration_title">Pin favorite recipe</string>
    <string name="cb_key_license">limit_license_key</string>
    <string name="cb_summary_false">False</string>
    <string name="cb_summary_true">True</string>
    <string name="cb_title_license">Show only recipes with an attribution license</string>
    <string name="pref_number_recipes_search">Number of recipes to search</string>
    <string name="pref_number_key">pref_number_key</string>
    <string name="search_option_key">search_option_key</string>
    <string name="search_option_label">Search mode</string>
    <string name="maximize_mode">1</string>
    <string name="minimize_mode">2</string>
    <string name="maximize_mode_label">Maximize used ingredients</string>
    <string name="minimize_mode_label">Minimize missing ingredients</string>
    <string name="ingredients_activity_title">Ingredients</string>
    <string name="insert_an_ingredient_hint">Insert an ingredient</string>
    <string name="add_button_text">ADD</string>
    <string name="add_ingredients_button_text">Start adding your ingredients!</string>
    <string name="add_ingredients_content_description">Icon to add new ingredients</string>
    <string name="recipe_removed_from_favorites">Recipe removed from favorites</string>
    <string name="resource_added_to_favorites">Recipe added to favorites</string>
</resources>
